@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Support binary fields (photos) in Kolab backends.
 [mms] Allow tagging system to be disabled via configuration option.
 [mjr] Fix importing certain vCards to sources only using the 'email' attribute
       (Bug #12955).
